make terminal stuff optional

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,25 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-recursion = "1.0.4"
-crossterm = {version = "0.26.1", features = ["event-stream"]}
-dyn-clonable = "0.9.0"
+async-recursion = "1"
+crossterm = {version = "0.26", features = ["event-stream"], optional = true}
+dyn-clonable = "0.9"
 futures-cancel = {git = "https://github.com/aschey/futures-cancel", rev = "563f413a206c50c7cc1a003cf6a9d3b227b0b04d"}
-futures-util = "0.3.28"
-leptos_reactive = {version = "0.2.5", features = ["stable"]}
-pin-project-lite = "0.2.9"
-ratatui = {git = "https://github.com/tui-rs-revival/ratatui", rev = "33b3f4e3122cc59eaa789c684dd17dae3a716be1"}
-thiserror = "1.0.40"
-tokio = {version = "1.27.0", features = ["rt-multi-thread", "macros", "sync"]}
-tokio-stream = {version = "0.1.12", features = ["sync"]}
-tokio-util = "0.7.7"
+futures-util = "0.3"
+leptos_reactive = {version = "0.2", features = ["stable"]}
+pin-project-lite = "0.2"
+thiserror = "1"
+tokio = {version = "1", features = ["rt-multi-thread", "macros", "sync"]}
+tokio-stream = {version = "0.1", features = ["sync"]}
+tokio-util = "0.7"
+
+[features]
+crossterm = ["dep:crossterm"]
 
 [dev-dependencies]
+ratatui = {git = "https://github.com/tui-rs-revival/ratatui", rev = "33b3f4e3122cc59eaa789c684dd17dae3a716be1"}
 tui-rsx = {git = "https://github.com/aschey/tui-rsx", rev = "177e7770420b97ce751d7b9b85abc0688e4b29c8"}
+
+[[example]]
+name = "example"
+required-features = ["crossterm"]
