--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ crossterm = { version = "0.26", features = ["event-stream"], optional = true }
 dyn-clonable = "0.9"
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "563f413a206c50c7cc1a003cf6a9d3b227b0b04d" }
 futures-util = "0.3"
-leptos_reactive = { version = "0.4" }
 pin-project-lite = "0.2"
 thiserror = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
@@ -21,6 +20,9 @@ tracing = "0.1"
 tui-rsx = { path = "../tui-rsx/crates/tui-rsx", optional = true }
 ratatui = { path = "../ratatui", optional = true }
 typed-builder = { version = "0.15", optional = true }
+slotmap = "1"
+once_cell = "1"
+paste = "1"
 
 [features]
 crossterm = ["dep:crossterm"]
@@ -32,6 +34,6 @@ ratatui = { path = "../ratatui" }
 tui-rsx = { path = "../tui-rsx/crates/tui-rsx" }
 typed-builder = "0.15.1"
 
-[[example]]
-name = "example"
-required-features = ["crossterm"]
+# [[example]]
+# name = "counter"
+# required-features = ["crossterm"]
