--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,3 @@
-[package]
-edition = "2021"
-name = "rooibos"
-version = "0.1.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-async-recursion = "1"
-crossterm = { version = "0.26", features = ["event-stream"], optional = true }
-dyn-clonable = "0.9"
-futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "563f413a206c50c7cc1a003cf6a9d3b227b0b04d" }
-futures-util = "0.3"
-pin-project-lite = "0.2"
-thiserror = "1"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
-tokio-stream = { version = "0.1", features = ["sync"] }
-tokio-util = "0.7"
-tracing = "0.1"
-tui-rsx = { path = "../tui-rsx/crates/tui-rsx", optional = true }
-ratatui = { path = "../ratatui", optional = true }
-typed-builder = { version = "0.15", optional = true }
-slotmap = "1"
-once_cell = "1"
-paste = "1"
-
-[features]
-crossterm = ["dep:crossterm"]
-default = ["crossterm", "rsx"]
-rsx = ["tui-rsx", "ratatui", "typed-builder"]
-
-[dev-dependencies]
-ratatui = { path = "../ratatui" }
-tui-rsx = { path = "../tui-rsx/crates/tui-rsx" }
-typed-builder = "0.15.1"
-
-# [[example]]
-# name = "counter"
-# required-features = ["crossterm"]
+[workspace]
+members = ["./crates/*", "examples"]
+resolver = "2"
