--- a/crates/rooibos-rsx/Cargo.toml
+++ b/crates/rooibos-rsx/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 derive_builder = "0.12"
 once_cell = "1"
-ratatui = { path = "../../../ratatui", default-features = false }
+ratatui = { version = "0.23", default-features = false }
 rooibos-macros = { path = "../rooibos-macros" }
 typed-builder = "0.16"
 typemap = "0.3"
