--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.26"
+crossterm = "0.27"
 rooibos = { path = "../crates/rooibos" }
-ratatui = { path = "../../ratatui" }
+ratatui = { version = "0.23" }
 tokio = { version = "1.31.0", features = ["rt-multi-thread", "macros"] }
