--- a/crates/rooibos-macros/Cargo.toml
+++ b/crates/rooibos-macros/Cargo.toml
@@ -10,7 +10,6 @@ proc-macro = true
 attribute-derive = "0.6"
 convert_case = "0.6"
 prettyplease = "0.2"
-proc-macro-error = "1"
 proc-macro2 = "1"
 quote = "1"
 regex = "1"
@@ -18,3 +17,4 @@ rstml = "0.11"
 syn = { version = "2", features = ["full"] }
 once_cell = "1"
 proc-macro-crate = "1"
+manyhow = "0.6.0"
