--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -10,3 +10,12 @@ crossterm = "0.27"
 rooibos = { path = "../crates/rooibos" }
 ratatui = { version = "0.23" }
 tokio = { version = "1.31.0", features = ["rt-multi-thread", "macros"] }
+tracing = "0.1.37"
+tilia = { git = "https://github.com/aschey/tilia", rev = "1bbb4151b8f16df98775dc2c4367b2da884dce47", features = [
+    "ipc",
+] }
+tracing-subscriber = { version = "0.3.17", features = [
+    "registry",
+    "env-filter",
+] }
+rand = "0.8.5"
