--- a/crates/rooibos-rsx/Cargo.toml
+++ b/crates/rooibos-rsx/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 derive_builder = "0.12"
 once_cell = "1"
 ratatui = { version = "0.23", default-features = false }
-rooibos-macros = { path = "../rooibos-macros" }
+rooibos-rsx-macros = { path = "../rooibos-rsx-macros" }
 typed-builder = "0.16"
 rooibos-reactive = { path = "../rooibos-reactive" }
 typemap-ors = "1.0.0"
