--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 crossterm = "0.27"
 rooibos = { path = "../crates/rooibos" }
-ratatui = { version = "0.23" }
+ratatui = { git = "https://github.com/ratatui-org/ratatui", rev = "301366c4fa33524b0634bbd3dcf1abd1a1ebe7c6" }
 tokio = { version = "1.31.0", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.37"
 tilia = { git = "https://github.com/aschey/tilia", rev = "1bbb4151b8f16df98775dc2c4367b2da884dce47", features = [
