--- a/crates/rooibos-rsx/Cargo.toml
+++ b/crates/rooibos-rsx/Cargo.toml
@@ -12,3 +12,4 @@ ratatui = { git = "https://github.com/ratatui-org/ratatui", rev = "301366c4fa335
 rooibos-rsx-macros = { path = "../rooibos-rsx-macros" }
 typed-builder = "0.16"
 rooibos-reactive = { path = "../rooibos-reactive" }
+matchit = "0.7"
