--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -18,7 +18,7 @@ tokio-stream = { version = "0.1", features = ["sync"] }
 tokio-util = "0.7"
 tracing = "0.1"
 rooibos-rsx = { path = "../rooibos-rsx" }
-ratatui = { git = "https://github.com/ratatui-org/ratatui", rev = "301366c4fa33524b0634bbd3dcf1abd1a1ebe7c6" }
+ratatui = { version = "0.23.1-alpha.4", default-features = false }
 typed-builder = { version = "0.16" }
 slotmap = "1"
 once_cell = "1"
@@ -27,5 +27,5 @@ rooibos-reactive = { path = "../rooibos-reactive" }
 
 
 [features]
-crossterm = ["dep:crossterm"]
+crossterm = ["dep:crossterm", "ratatui/crossterm"]
 default = ["crossterm"]
