--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ratatui = "0.23.1-alpha.4"
 crossterm = "0.27"
 rooibos = { path = "../crates/rooibos" }
-ratatui = { git = "https://github.com/ratatui-org/ratatui", rev = "301366c4fa33524b0634bbd3dcf1abd1a1ebe7c6" }
 tokio = { version = "1.31.0", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1.37"
 tilia = { git = "https://github.com/aschey/tilia", rev = "1bbb4151b8f16df98775dc2c4367b2da884dce47", features = [
@@ -19,5 +19,5 @@ tracing-subscriber = { version = "0.3.17", features = [
     "env-filter",
 ] }
 rand = "0.8.5"
-ratatui-textarea = "0.3.2"
-tui-tree-widget = "0.13.0"
+# ratatui-textarea = "0.3.2"
+# tui-tree-widget = "0.13.0"
