support querystring in router

--- a/crates/rooibos-rsx/Cargo.toml
+++ b/crates/rooibos-rsx/Cargo.toml
@@ -13,3 +13,4 @@ rooibos-rsx-macros = { path = "../rooibos-rsx-macros" }
 typed-builder = "0.16"
 rooibos-reactive = { path = "../rooibos-reactive" }
 matchit = "0.7"
+url = "2"
