--- a/crates/rooibos-rsx/Cargo.toml
+++ b/crates/rooibos-rsx/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 [dependencies]
 derive_builder = "0.12"
 once_cell = "1"
-ratatui = { version = "0.23.1-alpha.4", default-features = false }
+ratatui = { version = "0.24.0", default-features = false }
 rooibos-rsx-macros = { path = "../rooibos-rsx-macros" }
-typed-builder = "0.16"
+typed-builder = "0.18"
 rooibos-reactive = { path = "../rooibos-reactive" }
 matchit = "0.7"
 url = "2"
