--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -18,8 +18,8 @@ tokio-stream = { version = "0.1", features = ["sync"] }
 tokio-util = "0.7"
 tracing = "0.1"
 rooibos-rsx = { path = "../rooibos-rsx" }
-ratatui = { version = "0.23.1-alpha.4", default-features = false }
-typed-builder = { version = "0.16" }
+ratatui = { version = "0.24.0", default-features = false }
+typed-builder = { version = "0.18" }
 slotmap = "1"
 once_cell = "1"
 paste = "1"
