--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.27.0"
-leptos_reactive = "0.6.5"
+rooibos-reactive = { path = "../rooibos-reactive" }
 matchit = "0.7.3"
 paste = "1.0.14"
 ratatui = "0.26.1"
