--- a/crates/rooibos-reactive/Cargo.toml
+++ b/crates/rooibos-reactive/Cargo.toml
@@ -12,6 +12,9 @@ slotmap = { version = "1", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde-lite = { version = "0.5", optional = true }
 miniserde = { version = "0.1", optional = true }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+], default-features = false }
 futures = { version = "0.3" }
 rustc-hash = "1"
 serde_json = "1"
