--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -4,7 +4,7 @@ use_field_init_shorthand = true
 unstable_features = true
 version = "Two"
 comment_width = 100
-error_on_line_overflow = true
+error_on_line_overflow = false
 error_on_unformatted = false
 format_code_in_doc_comments = true
 format_macro_bodies = true
