--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -10,7 +10,7 @@ crossterm = "0.27.0"
 rooibos-reactive = { path = "../rooibos-reactive" }
 matchit = "0.7.3"
 paste = "1.0.14"
-ratatui = "0.26.1"
+ratatui = { path = "../../../ratatui" }
 rooibos-dom-macros = { path = "../rooibos-dom-macros" }
 slotmap = "1"
 typed-builder = "0.18.1"
