--- a/crates/rooibos-rsx-old/Cargo.toml
+++ b/crates/rooibos-rsx-old/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ratatui = { path = "../../../ratatui", default-features = false }
 derive_builder = "0.20"
 once_cell = "1"
-ratatui = { version = "0.26.1", default-features = false }
 rooibos-rsx-macros-old = { path = "../rooibos-rsx-macros-old" }
 typed-builder = "0.18"
 rooibos-reactive-old = { path = "../rooibos-reactive-old" }
