--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -15,3 +15,5 @@ rooibos-dom-macros = { path = "../rooibos-dom-macros" }
 slotmap = "1"
 typed-builder = "0.18.1"
 url = "2.5.0"
+indexmap = "2.2.5"
+rustc-hash = "1.1.0"
