--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.36.0", default-features = false, features = [
     "rt-multi-thread",
 ] }
 ratatui = { path = "../../../ratatui", default-features = false }
+dyn-clonable = "0.9"
 
 [features]
 default = ["crossterm"]
