--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.27.0"
-rooibos-reactive = { path = "../rooibos-reactive" }
+reactive_graph = { path = "../../../leptos/reactive_graph" }
+tachys = { path = "../../../leptos/tachys", features = ["reactive_graph"] }
+next_tuple = { path = "../../../leptos/next_tuple" }
+any_error = { path = "../../../leptos/any_error" }
+either_of = { path = "../../../leptos/either_of" }
 matchit = "0.7.3"
 paste = "1.0.14"
 ratatui = { path = "../../../ratatui" }
@@ -17,3 +21,4 @@ typed-builder = "0.18.1"
 url = "2.5.0"
 indexmap = "2.2.5"
 rustc-hash = "1.1.0"
+tokio = { version = "1.37.0", default-features = false, features = ["sync"] }
