--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -12,9 +12,9 @@ tachys = { path = "../../../leptos/tachys", features = ["reactive_graph"] }
 next_tuple = { path = "../../../leptos/next_tuple" }
 any_error = { path = "../../../leptos/any_error" }
 either_of = { path = "../../../leptos/either_of" }
-matchit = "0.7.3"
+matchit = "0.8"
 paste = "1.0.14"
-ratatui = { path = "../../../ratatui" }
+ratatui = "0.26"
 rooibos-dom-macros = { path = "../rooibos-dom-macros" }
 slotmap = "1"
 typed-builder = "0.18.1"
