--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -18,5 +18,4 @@ tracing-subscriber = { version = "0.3.18", features = [
 ] }
 rand = "0.8.5"
 tui-textarea = "0.4.0"
-# ratatui-textarea = "0.3.2"
-# tui-tree-widget = "0.13.0"
+tui-tree-widget = "0.19.0"
