add router, support render ref

--- a/examples-old/Cargo.toml
+++ b/examples-old/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ratatui = { version = "0.26" }
+ratatui = { path = "../../ratatui" }
 crossterm = "0.27"
 rooibos-old = { path = "../crates/rooibos-old" }
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
