--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -14,7 +14,7 @@ any_error = { path = "../../../leptos/any_error" }
 either_of = { path = "../../../leptos/either_of" }
 matchit = "0.8"
 paste = "1.0.14"
-ratatui = "0.26"
+ratatui = { path = "../../../ratatui", features = ["unstable"] }
 rooibos-dom-macros = { path = "../rooibos-dom-macros" }
 slotmap = "1"
 typed-builder = "0.18.1"
@@ -22,3 +22,12 @@ url = "2.5.0"
 indexmap = "2.2.5"
 rustc-hash = "1.1.0"
 tokio = { version = "1.37.0", default-features = false, features = ["sync"] }
+
+[dev-dependencies]
+any_spawner = { path = "../../../leptos/any_spawner", features = ["tokio"] }
+ctor = "0.2.7"
+tokio = { version = "1.37.0", default-features = false, features = [
+    "sync",
+    "macros",
+    "rt-multi-thread",
+] }
