--- a/crates/rooibos-rsx-old/Cargo.toml
+++ b/crates/rooibos-rsx-old/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ratatui = { version = "0.26", default-features = false }
+ratatui = { path = "../../../ratatui", default-features = false }
 derive_builder = "0.20"
 once_cell = "1"
 rooibos-rsx-macros-old = { path = "../rooibos-rsx-macros-old" }
