--- a/crates/rooibos-runtime-old/Cargo.toml
+++ b/crates/rooibos-runtime-old/Cargo.toml
@@ -18,7 +18,7 @@ tokio-stream = { version = "0.1", features = ["sync"] }
 tokio-util = "0.7"
 tracing = "0.1"
 rooibos-rsx-old = { path = "../rooibos-rsx-old" }
-ratatui = { version = "0.26", default-features = false }
+ratatui = { path = "../../../ratatui", default-features = false }
 typed-builder = { version = "0.18" }
 slotmap = "1"
 once_cell = "1"
