--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -7,15 +7,16 @@ edition = "2021"
 crossterm = { version = "0.27", features = ["event-stream"], optional = true }
 futures-util = "0.3"
 rooibos-dom = { path = "../rooibos-dom" }
-reactive_graph = { path = "../../../leptos/reactive_graph" }
-any_spawner = { path = "../../../leptos/any_spawner", features = ["tokio"] }
+reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "9e6ccd6bdee021ea72042af30cfa24100a756f79" }
+any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "9e6ccd6bdee021ea72042af30cfa24100a756f79", features = [
+    "tokio",
+] }
 tokio = { version = "1.37.0", default-features = false, features = [
     "sync",
     "macros",
     "rt-multi-thread",
 ] }
-ratatui = { path = "../../../ratatui", default-features = false }
-dyn-clonable = "0.9"
+ratatui = { version = "0.26", default-features = false }
 
 [features]
 default = ["crossterm"]
