--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ratatui = { path = "../../ratatui" }
+ratatui = "0.26"
 crossterm = "0.27"
 rooibos = { path = "../crates/rooibos" }
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
