--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -9,3 +9,10 @@ reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "f34b9915c
 rooibos-runtime = { path = "../rooibos-runtime" }
 rooibos-runtime-macros = { path = "../rooibos-runtime-macros" }
 rooibos-components = { path = "../rooibos-components" }
+
+[features]
+nightly = [
+    "reactive_graph/nightly",
+    "rooibos-dom/nightly",
+    "rooibos-runtime/nightly",
+]
