--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -18,3 +18,6 @@ tracing-subscriber = { version = "0.3.18", features = [
 rand = "0.8.5"
 tui-textarea = "0.4.0"
 tui-tree-widget = "0.19.0"
+
+[features]
+nightly = ["rooibos/nightly"]
