--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -17,6 +17,8 @@ tokio = { version = "1.37.0", default-features = false, features = [
     "rt-multi-thread",
 ] }
 ratatui = { version = "0.26", default-features = false }
+tap = "1"
+tracing = "0.1"
 
 [features]
 default = ["crossterm"]
