--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -7,21 +7,27 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.27"
-reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "99edd295ba3d4a30004e1b676f367f90be5eb6d2", features = [
+reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3", features = [
     "tracing",
 ] }
-tachys = { git = "https://github.com/leptos-rs/leptos", rev = "99edd295ba3d4a30004e1b676f367f90be5eb6d2", features = [
+tachys = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3", features = [
     "reactive_graph",
 ] }
-next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "99edd295ba3d4a30004e1b676f367f90be5eb6d2" }
+any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3", features = [
+    "tokio",
+] }
+
+throw_error = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3" }
+next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3" }
 ratatui = { version = "0.26", features = ["unstable"] }
 slotmap = "1"
 tokio = { version = "1.37.0", default-features = false, features = ["sync"] }
 bitflags = "2"
 derivative = "2"
+futures = "0.3.30"
 
 [dev-dependencies]
-any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "99edd295ba3d4a30004e1b676f367f90be5eb6d2", features = [
+any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3", features = [
     "tokio",
 ] }
 ctor = "0.2.7"
