--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -18,6 +18,8 @@ tracing-subscriber = { version = "0.3.18", features = [
 rand = "0.8.5"
 tui-textarea = "0.4.0"
 tui-tree-widget = "0.19.0"
+reqwest = { version = "0.12.4", features = ["json"] }
+serde = "1.0.201"
 
 [features]
 nightly = ["rooibos/nightly"]
