--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -4,14 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3", features = [
+reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "64d2b33f9321c0c19c06b6cdc33433a0e06db113", features = [
     "tracing",
+    "effects",
 ] }
-tachys = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3", features = [
+tachys = { git = "https://github.com/leptos-rs/leptos", rev = "64d2b33f9321c0c19c06b6cdc33433a0e06db113", features = [
     "reactive_graph",
 ] }
-next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3" }
-either_of = { git = "https://github.com/leptos-rs/leptos", rev = "49066758ecc6329ab21a9b5e5248ec60d747c6d3" }
+next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "64d2b33f9321c0c19c06b6cdc33433a0e06db113" }
+either_of = { git = "https://github.com/leptos-rs/leptos", rev = "64d2b33f9321c0c19c06b6cdc33433a0e06db113" }
 matchit = "0.8"
 rooibos-dom = { path = "../rooibos-dom" }
 rooibos-runtime = { path = "../rooibos-runtime" }
