--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -20,3 +20,5 @@ nightly = [
     "rooibos-dom/nightly",
     "rooibos-runtime/nightly",
 ]
+crossterm = ["rooibos-dom/crossterm", "rooibos-runtime/crossterm"]
+termion = ["rooibos-dom/termion", "rooibos-runtime/termion"]
