--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.27"
+crossterm = { version = "0.27", optional = true }
 reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "64d2b33f9321c0c19c06b6cdc33433a0e06db113", features = [
     "tracing",
     "effects",
@@ -27,6 +27,7 @@ bitflags = "2"
 derivative = "2"
 futures = "0.3.30"
 rustc-hash = "1"
+termion = { version = "4", optional = true }
 
 [dev-dependencies]
 any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "64d2b33f9321c0c19c06b6cdc33433a0e06db113", features = [
@@ -41,3 +42,6 @@ tokio = { version = "1.37.0", default-features = false, features = [
 
 [features]
 nightly = ["reactive_graph/nightly", "tachys/nightly"]
+crossterm = ["dep:crossterm"]
+termion = ["dep:termion"]
+default = ["crossterm", "termion"]
