--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -22,6 +22,8 @@ ratatui = { version = "0.26", default-features = false }
 tap = "1"
 tracing = "0.1"
 termion = { version = "4", optional = true }
+async-signal = "0.2"
+signal-hook = "0.3"
 
 [features]
 default = ["crossterm"]
