--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -27,6 +27,8 @@ bitflags = "2"
 derivative = "2"
 futures = "0.3.30"
 rustc-hash = "1"
+
+[target.'cfg(unix)'.dependencies]
 termion = { version = "4", optional = true }
 
 [dev-dependencies]
