--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -21,9 +21,11 @@ tokio = { version = "1.37.0", default-features = false, features = [
 ratatui = { version = "0.26", default-features = false }
 tap = "1"
 tracing = "0.1"
-termion = { version = "4", optional = true }
 async-signal = "0.2"
 signal-hook = "0.3"
+
+[target.'cfg(unix)'.dependencies]
+termion = { version = "4", optional = true }
 
 [features]
 default = ["crossterm"]
