--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,10 @@ jobs:
         run: cargo build
       - name: Test
         run: cargo test
-  all-features:
+  all-features-unix:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -34,3 +34,15 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Build
         run: cargo +nightly build --all-features
+  all-features-windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install Rust nightly
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: nightly
+      - uses: Swatinem/rust-cache@v2
+      - name: Build
+        run: cargo +nightly build --features=crossterm,nightly
