--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -20,6 +20,7 @@ tui-textarea = "0.4.0"
 tui-tree-widget = "0.20.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = "1.0.203"
+axum = "0.7.5"
 
 [features]
 nightly = ["rooibos/nightly"]
