--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 rooibos-dom = { path = "../rooibos-dom" }
-reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "46f5f8762b04b6964d521eb399366c882ceab198", features = [
+reactive_graph = { path = "../../../leptos/reactive_graph", features = [
     "tracing",
     "effects",
 ] }
@@ -20,6 +20,15 @@ nightly = [
     "rooibos-dom/nightly",
     "rooibos-runtime/nightly",
 ]
-crossterm = ["rooibos-dom/crossterm", "rooibos-runtime/crossterm"]
-termion = ["rooibos-dom/termion", "rooibos-runtime/termion"]
+crossterm = [
+    "rooibos-dom/crossterm",
+    "rooibos-runtime/crossterm",
+    "rooibos-components/crossterm",
+]
+termion = [
+    "rooibos-dom/termion",
+    "rooibos-runtime/termion",
+    "rooibos-components/termion",
+]
 default = ["crossterm"]
+input-search = ["rooibos-components/input-search"]
