fix rendering with unmounted children

--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -9,6 +9,7 @@ futures-util = "0.3"
 rooibos-dom = { path = "../rooibos-dom" }
 reactive_graph = { path = "../../../leptos/reactive_graph", features = [
     "tracing",
+    "effects",
 ] }
 any_spawner = { path = "../../../leptos/any_spawner", features = ["tokio"] }
 tokio = { version = "1.37.0", default-features = false, features = [
