--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -19,7 +19,7 @@ url = "2"
 derivative = "2"
 ratatui = { version = "0.26", default-features = false }
 tui-textarea = { version = "0.4", default-features = false }
-tokio = { version = "1", features = ["sync"] }
+tokio = { version = "1", default-features = false, features = ["sync"] }
 once_cell = "1"
 tracing = "0.1"
 
