--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -11,24 +11,42 @@ reactive_graph = { path = "../../../leptos/reactive_graph", features = [
     "tracing",
     "effects",
 ] }
-any_spawner = { path = "../../../leptos/any_spawner", features = ["tokio"] }
-tokio = { version = "1.37.0", default-features = false, features = [
-    "sync",
-    "macros",
-    "rt-multi-thread",
-] }
 ratatui = { version = "0.26", default-features = false }
 tap = "1"
 tracing = "0.1"
-async-signal = "0.2"
-signal-hook = "0.3"
 derivative = "2"
+ratatui-wasm = { path = "../../../ratatui-wasm", optional = true }
 
 [target.'cfg(unix)'.dependencies]
 termion = { version = "4", optional = true }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+js-sys = "0.3.64"
+any_spawner = { path = "../../../leptos/any_spawner", features = [
+    "wasm-bindgen",
+] }
+tokio = { version = "1.37.0", default-features = false, features = [
+    "sync",
+    "macros",
+    "rt",
+] }
+web-sys = { version = "0.3.64", features = ["console", "Window", "Document"] }
+wasm-bindgen-futures = "0.4.37"
+console_error_panic_hook = "0.1"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+any_spawner = { path = "../../../leptos/any_spawner", features = ["tokio"] }
+signal-hook = "0.3"
+async-signal = "0.2"
+tokio = { version = "1.37.0", default-features = false, features = [
+    "sync",
+    "macros",
+    "time",
+    "rt-multi-thread",
+] }
+
 [features]
 default = ["crossterm"]
-crossterm = ["dep:crossterm", "ratatui/crossterm"]
+crossterm = ["dep:crossterm", "ratatui/crossterm", "ratatui-wasm"]
 termion = ["dep:termion", "ratatui/termion"]
 nightly = ["reactive_graph/nightly"]
