--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -16,6 +16,7 @@ tap = "1"
 tracing = "0.1"
 derivative = "2"
 ratatui-wasm = { path = "../../../ratatui-wasm", optional = true }
+termwiz = { version = "0.22.0", optional = true }
 
 [target.'cfg(unix)'.dependencies]
 termion = { version = "4", optional = true }
@@ -50,3 +51,4 @@ default = ["crossterm"]
 crossterm = ["dep:crossterm", "ratatui/crossterm", "ratatui-wasm"]
 termion = ["dep:termion", "ratatui/termion"]
 nightly = ["reactive_graph/nightly"]
+termwiz = ["dep:termwiz", "ratatui/termwiz"]
