--- a/crates/rooibos-ssh/Cargo.toml
+++ b/crates/rooibos-ssh/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+crossterm = { version = "0.27", optional = true }
 russh-keys = "0.43"
 russh = "0.43"
 rooibos-runtime = { path = "../rooibos-runtime" }
@@ -19,3 +20,6 @@ reactive_graph = { path = "../../../leptos/reactive_graph", features = [
     "effects",
 ] }
 terminput = { path = "../../../terminput" }
+
+[features]
+crossterm = ["dep:crossterm"]
