move xterm-js backend

--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -13,6 +13,7 @@ rooibos-runtime = { path = "../rooibos-runtime" }
 rooibos-runtime-macros = { path = "../rooibos-runtime-macros" }
 rooibos-components = { path = "../rooibos-components" }
 rooibos-ssh = { path = "../rooibos-ssh", optional = true }
+rooibos-xterm-js = { path = "../rooibos-xterm-js", optional = true }
 ratatui = { version = "0.26", features = ["unstable"] }
 
 [features]
@@ -37,6 +38,7 @@ termwiz = [
     "rooibos-runtime/termwiz",
     "rooibos-components/termwiz",
 ]
+xterm-js = ["rooibos-xterm-js"]
 default = ["crossterm"]
 ssh = ["rooibos-ssh"]
 input-search = ["rooibos-components/input-search"]
