--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -15,7 +15,6 @@ ratatui = { version = "0.26", default-features = false }
 tap = "1"
 tracing = "0.1"
 derivative = "2"
-ratatui-wasm = { path = "../../../ratatui-wasm", optional = true }
 termwiz = { version = "0.22.0", optional = true }
 
 [target.'cfg(unix)'.dependencies]
@@ -48,7 +47,7 @@ tokio = { version = "1.37.0", default-features = false, features = [
 
 [features]
 default = ["crossterm"]
-crossterm = ["dep:crossterm", "ratatui/crossterm", "ratatui-wasm"]
+crossterm = ["dep:crossterm", "ratatui/crossterm"]
 termion = ["dep:termion", "ratatui/termion"]
 nightly = ["reactive_graph/nightly"]
 termwiz = ["dep:termwiz", "ratatui/termwiz"]
