--- a/examples/wasm/Cargo.toml
+++ b/examples/wasm/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 crossterm = "0.27"
-rooibos = { path = "../../crates/rooibos" }
+rooibos = { path = "../../crates/rooibos", features = ["xterm-js"] }
 tokio = { version = "1.37.0", features = ["rt", "macros"] }
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = "0.4.37"
