--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -17,7 +17,7 @@ tracing-subscriber = { version = "0.3.18", features = [
 ] }
 rand = "0.8.5"
 tui-textarea = "0.4.0"
-tui-tree-widget = "0.20.0"
+tui-tree-widget = { path = "../../tui-rs-tree-widget" }
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = "1.0.203"
 axum = "0.7.5"
