add test harness

--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -26,7 +26,7 @@ js-sys = "0.3.64"
 any_spawner = { path = "../../../leptos/any_spawner", features = [
     "wasm-bindgen",
 ] }
-tokio = { version = "1.37.0", default-features = false, features = [
+tokio = { version = "1.38.0", default-features = false, features = [
     "sync",
     "macros",
     "rt",
@@ -39,11 +39,12 @@ console_error_panic_hook = "0.1"
 any_spawner = { path = "../../../leptos/any_spawner", features = ["tokio"] }
 signal-hook = "0.3"
 async-signal = "0.2"
-tokio = { version = "1.37.0", default-features = false, features = [
+tokio = { version = "1.38.0", default-features = false, features = [
     "sync",
     "macros",
     "time",
     "rt-multi-thread",
+    "process",
 ] }
 
 [features]
