--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -12,6 +12,7 @@ reactive_graph = { path = "../../../leptos/reactive_graph", features = [
 rooibos-runtime = { path = "../rooibos-runtime" }
 rooibos-runtime-macros = { path = "../rooibos-runtime-macros" }
 rooibos-components = { path = "../rooibos-components" }
+rooibos-tester = { path = "../rooibos-tester" }
 rooibos-ssh = { path = "../rooibos-ssh", optional = true }
 rooibos-xterm-js = { path = "../rooibos-xterm-js", optional = true }
 ratatui = { version = "0.27", features = ["unstable"] }
@@ -42,3 +43,7 @@ xterm-js = ["rooibos-xterm-js"]
 default = ["crossterm"]
 ssh = ["rooibos-ssh"]
 input-search = ["rooibos-components/input-search"]
+
+[dev-dependencies]
+insta = "1.39.0"
+tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync"] }
