--- a/crates/rooibos-xterm-js/Cargo.toml
+++ b/crates/rooibos-xterm-js/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-ratatui-wasm = { path = "../../../ratatui-wasm" }
+ratatui-wasm = { git = "https://github.com/aschey/ratatui-wasm", rev = "988922cffe026abf4f408281b5b4731aab264949" }
 crossterm = { version = "0.27", features = ["event-stream"] }
 futures = "0.3"
 ratatui = { version = "0.27", default-features = false }
